--- a/public/global.css
+++ b/public/global.css
@@ -61,3 +61,10 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+footer {
+        text-align: center;
+        padding: 3px;
+        background-color: #f1f7fa;
+        color: white;
+}
